no-nat-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: no-nat-namespace
   annotations:
      ncp/no_snat: "true"
