yelb-no-nat-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: yelb
   annotations:
      ncp/no_snat: "true"
