nsx-demo-service-snat.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsx-demo-svc-snat
  labels:
    app: nsx-demo-svc-snat
  annotations:
    ncp/snat_pool: svc-snat-ip-pool-01
spec:
  clusterIP: "None"
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    app: nsx-demo
