nsx-demo-type-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsx-demo
  labels:
    app: mod2
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: nsx-demo
  selector:
    app: nsx-demo
  type: LoadBalancer
