nsx-demo-type-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsx-demo
  labels:
    app: nsx-demo
spec:
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    app: nsx-demo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nsx-demo-ingress
spec:
  rules:
  - host: nsx.demo.corp.local
    http:
      paths:
      - backend:
          serviceName: nsx-demo
          servicePort: 80
