yelb-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  labels:
    app: redis-server
    tier: cache
spec:
  type: ClusterIP
  ports:
  - port: 6379
  selector:
    app: redis-server
    tier: cache
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-db
  labels:
    app: yelb-db
    tier: backenddb
spec:
  type: ClusterIP
  ports:
  - port: 5432
  selector:
    app: yelb-db
    tier: backenddb
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-appserver
  labels:
    app: yelb-appserver
    tier: middletier
spec:
  type: ClusterIP
  ports:
  - port: 4567
  selector:
    app: yelb-appserver
    tier: middletier
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui
  labels:
    app: yelb-ui
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: yelb-ui
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yelb-ui-ingress
spec:
  rules:
    - host: yelb.pks-cl01-apps.acepod.com
      http:
        paths:
        - backend:
            serviceName: yelb-ui
            servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yelb-ui
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: yelb-ui
        tier: frontend
        secgroup: web
    spec:
      containers:
      - name: yelb-ui
#        image:  harbor.corp.local/library/restreview-ui:V1
        image: mreferre/yelb-ui:0.3
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-server
        tier: cache
        secgroup: cache 
    spec:
      containers:
      - name: redis-server
#        image: harbor.corp.local/library/restreview-redis:V1
        image: redis:4.0.2
        ports:
        - containerPort: 6379
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yelb-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: yelb-db
        tier: backenddb
        secgroup: db
    spec:
      containers:
      - name: yelb-db
#        image:  harbor.corp.local/library/restreview-db:V1
        image: mreferre/yelb-db:0.3
        ports:
        - containerPort: 5432
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yelb-appserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: yelb-appserver
        tier: middletier
        secgroup: app
    spec:
      containers:
      - name: yelb-appserver
#        image:  harbor.corp.local/library/restreview-appserver:V2
        image: mreferre/yelb-appserver:0.3
        ports:
        - containerPort: 4567
